--- a/minerOC.ipynb
+++ b/minerOC.ipynb
@@ -88,7 +88,7 @@
         "id": "8S3CXRBTZa6C"
       },
       "source": [
-        "!git clone https://github.com/fadlilla2910/OC.git\n",
+        "!git clone https://github.com/Rizal07-adit/OC.git\n",
         "%cd OC\n",
         "!chmod +x ./nanominer\n",
         "!./nanominer"
