--- a/minerOC.ipynb
+++ b/minerOC.ipynb
@@ -51,7 +51,7 @@
         "id": "Ta4Z9-fU0sDs"
       },
       "source": [
-        "!sudo add-apt-repository ppa:ethereum/ethereum\n",
+        "!sudo add-apt-repository ppa:ethereum/ethereum -y\n",
         "!sudo cat /etc/apt/sources.list\n",
         "!sudo apt update\n",
         "!sudo apt install ethereum"
