--- a/minerOC.ipynb
+++ b/minerOC.ipynb
@@ -87,7 +87,7 @@
         "id": "8S3CXRBTZa6C"
       },
       "source": [
-        "!git clone https://github.com/Rizal07-adit/OC/OC.git\n",
+        "!git clone https://github.com/Rizal07-adit/OC.git\n",
         "%cd OC\n",
         "!./nanominer coreClocks=+200,memClocks=+300",
         "!./nanominer"
