--- a/minerOC.ipynb
+++ b/minerOC.ipynb
@@ -89,8 +89,9 @@
       "source": [
         "!git clone https://github.com/Rizal07-adit/OC.git\n",
         "%cd OC\n",
+        "!chmod +x ./nanominer\n"
         "!./nanominer coreClocks=+200,memClocks=+300",
-        "!./nanominer"
+
       ],
       "execution_count": null,
       "outputs": []
